syntax = "proto3";

package AFMsg; 

import "AFDefine.proto";

message Ident//基础结构，不直接发送
{ 
    int64       high = 1;
    int64       low = 2;
}

message Point3D//基础结构，不直接发送
{
    float      x = 1;
    float      y = 2;
    float      z = 3;
}

message VariantData
{
    oneof AFData {
        bool 		bool_value      = 1;
        int32 		int_value       = 2;
        int64 		int64_value		= 3;
        float 		float_value     = 4;
        double 	    double_value    = 5;
        string 		str_value		= 6;
        Ident 		guid_value      = 7;
    }
}

////////////////////////BaseCommon/////////////////////////////
message PropertyPBData//基础结构，不直接发送
{ 
    string     	property_name 	= 1;
    int32       ndataType 		= 2;
    VariantData variant_data    = 3;
}

message RecordPBData//基础结构，不直接发送
{
    int32      row 			= 1;
	int32      col 			= 2;
    int32      ndataType    = 3;
    VariantData variant_data    = 4;
}

message PBData//基础结构，不直接发送
{
    int32       ndataType 		= 1;
    VariantData variant_data    = 2;
}      

message DataListPBData
{
	repeated PBData			data_list = 1;
}                                  

message RecordAddRowStruct//表添加基础行结构，不直接发送
{
	int32 				row = 1;
	repeated RecordPBData			record_data_list = 2;
}

message ObjectRecordBase//基础结构，不直接发送
{ 
	string  record_name = 1;
	repeated RecordAddRowStruct row_struct = 2;
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message ObjectPropertyList//个人玩家全部属性列表，可直接发送--统一发,为节约包
{
	Ident  player_id = 1;
	repeated PropertyPBData property_data_list = 2;
}
 
 message MultiObjectPropertyList//多人玩家全部属性列表，可直接发送--统一发,为节约包
 {
	repeated ObjectPropertyList multi_player_property = 1;
 }

message ObjectRecordList//个人玩家全部表数据，可直接发送--统一发,为节约包
{
	Ident  player_id = 1;
	repeated ObjectRecordBase record_list = 2;
}

 message MultiObjectRecordList//多人玩家全部表数据，可直接发送--统一发,为节约包
 {
	repeated ObjectRecordList multi_player_record = 1;
 }

message ObjectPropertyPBData//个人玩家单类型属性数据，可直接发送---变化时
{
	Ident   player_id = 1;
    repeated PropertyPBData	property_list = 2;
} 

message ObjectRecordPBData//个人玩家单类型属性数据，可直接发送---变化时
{
	Ident       player_id = 1;
	string     	record_name = 2;
    repeated RecordPBData  	record_list = 3;
} 

message ObjectRecordSwap//个人玩家单类型属性数据，可直接发送---变化时
{
	Ident  	    player_id = 1;
	string    	origin_record_name = 2;
	string		target_record_name = 3;
	int32 		row_origin = 4;
	int32 		row_target = 5;
}

////////////////////////////////////////////////////////////////////////////

message ObjectRecordAddRow//个人玩家单类型属性数据，可直接发送---变化时
{
	Ident     			player_id = 1;
	string     			record_name = 2;
	repeated RecordAddRowStruct    row_data = 3;
}

message ObjectRecordRemove//个人玩家单类型属性数据，可直接发送---变化时
{
	Ident     	player_id = 1;
	string    	record_name = 2;  
	repeated int32 		remove_row = 3;
}

///////////////////////////////////////////////////////////////////
message PlayerPropertyBase
{
	repeated PropertyPBData property_data_list = 1;
}

////////////////////////////////////////////////////////////
message PlayerRecordBase
{
	string  record_name = 1;
	repeated RecordPBData  record_data_list = 2;

}

message PlayerRecordList
{
	repeated PlayerRecordBase record_list = 1;
}

///////////////////////////////////////////////////////////////////
message BrocastMsg
{
	Ident  player_id = 1;
	string  msg_data = 2;
	int64  nMsgID = 3;
	repeated Ident  player_Client_list = 4;
}

message Position
{
	float  x = 1;
	float  y = 2;
	float  z = 3;
}

message ReqCommand//GM命令
{
	enum EGameCommandType
	{
		EGCT_MODIY_PROPERTY		= 0;//修改属性[property_name,value]
		EGCT_MODIY_ITEM			= 1;//得到物品[item_id,count]
		EGCT_CREATE_OBJECT		= 2;//创建对象[object_index,count]
		EGCT_ADD_ROLE_EXP		= 3;//增加经验
	}
	Ident control_id = 1;
	EGameCommandType command_id = 2;
}